--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,19 +22,7 @@ classifiers = [
   "Programming Language :: Python :: Implementation :: PyPy",
 ]
 dependencies = [
-  "jupyterlab~=4.0",
-  "jupyterlab-server>=2.22.1,<3",
-  "requests>=2.24,<3",
-  "pandas==1.3.3",
-  "matplotlib~=3.7.1",
-  "xarray==0.19.0",
-  "numpy~=1.24.3",
-  "archytas~=1.0",
-  "pyzmq~=25.1.0",
-  "six~=1.16.0",
-  "tornado~=6.3.2",
-  "scipy~=1.11.1",
-  "jinja2~=3.1.2",
+  "beaker-kernel~=1.2.3",
   "elwood==0.1.4",
 ]
 
