--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,15 +15,10 @@ services:
       - JUPYTER_TOKEN=89f73481102c46c0bc13b2998f9a4fce
       - ENABLE_USER_PROMPT=true
       - OPENAI_API_KEY
-      # volumes:
+      - HMI_SERVER
+      - BASIC_AUTH_TOKEN
+    volumes:
+      - .:/elwood_context
       # - ./beaker_kernel:/usr/local/share/jupyter/kernels/beaker_kernel
       # - .:/jupyter
-    command:
-      [
-        "python",
-        "-m",
-        "beaker_kernel.server.dev",
-        "--ip",
-        "0.0.0.0",
-        "-y"
-      ]
+    command: [ "python", "-m", "beaker_kernel.server.dev", "watch" ]
