Removing elwood, currently broken.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,6 +17,8 @@ services:
       - OPENAI_API_KEY
       - HMI_SERVER
       - BASIC_AUTH_TOKEN
+      - HMI_SERVER_USER
+      - HMI_SERVER_PASSWORD
     volumes:
       - .:/elwood_context
       # - ./beaker_kernel:/usr/local/share/jupyter/kernels/beaker_kernel
