--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,8 @@ classifiers = [
 ]
 dependencies = [
 #  "beaker-kernel@https://github.com/jataware/beaker-kernel/archive/feature/auto-reload-on-filechange.zip",
-  "beaker-kernel~=1.2.3",
+  "beaker-kernel==1.2.4",
+  "archytas==1.1.4",
   "elwood==0.1.4",
   "flowcast~=0.2.6",
   "basemap~=1.4.0",
