--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,7 +20,7 @@ services:
       - HMI_SERVER_USER
       - HMI_SERVER_PASSWORD
     volumes:
-      - .:/elwood_context
+      - .:/climate_data_utility_context
       # - ./beaker_kernel:/usr/local/share/jupyter/kernels/beaker_kernel
       # - .:/jupyter
     command: [ "python", "-m", "beaker_kernel.server.dev", "watch" ]
