--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,12 +22,11 @@ classifiers = [
   "Programming Language :: Python :: Implementation :: PyPy",
 ]
 dependencies = [
-#  "beaker-kernel@https://github.com/jataware/beaker-kernel/archive/feature/auto-reload-on-filechange.zip",
   "beaker-kernel==1.2.5",
   "archytas==1.1.4",
+  "cartopy==0.22.0",
   "elwood==0.1.4",
   "flowcast~=0.2.6",
-  "basemap~=1.4.0",
 ]
 
 [tool.hatch.metadata]
