--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,11 +22,11 @@ classifiers = [
   "Programming Language :: Python :: Implementation :: PyPy",
 ]
 dependencies = [
-  "beaker-kernel==1.2.5",
-  "archytas==1.1.4",
+  "beaker-kernel>=1.2.7",
   "cartopy==0.22.0",
   "elwood==0.1.4",
   "flowcast~=0.2.6",
+  "h5netcdf~=1.3.0"
 ]
 
 [tool.hatch.metadata]
